# error-rail

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  QUICK_START.md  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  feature-matrix.yml  release.yml  rust.yml  security.yml
benches/: benchmark.rs
benches/benchmark/: async_ops.rs  context.rs  conversions.rs  core.rs  features.rs  fingerprint.rs  formatting.rs  lazy_context.rs  main.rs  memory.rs  pipeline.rs  retry.rs  scaling.rs  scenarios.rs  tower.rs  traits.rs  validation.rs
benches/benchmark/common/: mod.rs
docs/: BENCHMARKS.md  PATTERNS.md  QUICK_START.md  QUICK_START_ASYNC.md
examples/: api_layering.rs  async_api_patterns.rs  async_tower_integration.rs  pattern_cli_app.rs  pattern_http_api.rs  pattern_library_dev.rs  pattern_service_layer.rs  pipeline.rs  quick_start.rs  readme_features.rs  repro_display.rs  retry_integration.rs  serde_logging.rs  simple_quick_start.rs  validation_collect.rs  validation_macro.rs
src/: advanced.rs  context.rs  intermediate.rs  lib.rs  macros.rs  prelude.rs  prelude_async.rs  simple.rs  tower.rs
src/async_ext/: context_future.rs  future_ext.rs  mod.rs  pipeline.rs  retry.rs  tokio_ext.rs  tracing_ext.rs  validation.rs
src/context/: mod.rs
src/convert/: mod.rs
src/macros/: mod.rs
src/traits/: error_category.rs  error_ops.rs  into_error_context.rs  mod.rs  result_ext.rs  transient.rs  with_error.rs
src/types/: accumulator.rs  alloc_type.rs  composable_error.rs  error_context.rs  error_formatter.rs  error_pipeline.rs  lazy_context.rs  marked_error.rs  mod.rs  pipeline_ops.rs  retry.rs  utils.rs
src/types/composable_error/: fingerprint.rs  legacy.rs  mod.rs  traits.rs
src/validation/: core.rs  iter.rs  mod.rs  prelude.rs  traits.rs
tests/: error_traits.rs  integration_tokio_tower.rs  mod.rs  tower_tests.rs
tests/async_ext/: context_future.rs  future_ext_tests.rs  macro_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  retry.rs  retry_tests.rs  tokio_tests.rs  tracing_tests.rs  validation_tests.rs
tests/context/: mod.rs
tests/convert/: mod.rs
tests/macros/: backtrace.rs  group_test.rs  impl_error_context.rs  mod.rs
tests/traits/: error_ops.rs  into_error_context.rs  mod.rs  result_ext.rs  transient.rs  with_error.rs
tests/types/: accumulator.rs  bitflags_refactor.rs  composable_error.rs  error_context.rs  error_context_builder.rs  error_context_builder_example.rs  error_formatter.rs  error_pipeline.rs  fingerprint.rs  formatting.rs  mod.rs  pipeline_ops.rs  retry.rs
tests/unit/: enhancements.rs  mod.rs
tests/validation/: core.rs  iter.rs  mod.rs  traits.rs
