[package]
name = "error-rail"
version = "0.6.0"
authors = ["jeong-il suk <wjddlf211@naver.com>"]
edition = "2021"
license = "Apache-2.0"
description = "ErrorRail is a no_std compatible Error Handling library for the Rust language."
repository = "https://github.com/but212/error-rail"
keywords = ["error", "error-handling", "no_std"]
categories = ["algorithms", "no-std"]
readme = "README.md"
rust-version = "1.81.0"

[package.metadata]
msrv = "1.81.0"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
smallvec = "1.15.1"

[dev-dependencies]
serde_json = "1.0.145"
criterion = "0.7.0"

[features]
default = []
std = []
serde = ["dep:serde", "smallvec/serde"]
full = ["serde", "std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[bench]]
name = "benchmark"
harness = false
